# JobManage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: exception-request.md
.github/workflows/: ci-artifacts.yml  ci-grep-sqlite.yml  ci-scan-metrics.yml  ci-secrets-scan.yml  ci.yml  lint.yml  render-diagrams.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_create_jobs.py  0002_add_job_timestamps.py
dev-requirements/: requirements-dev.txt
docker/: entrypoint.sh  wait_for_pg.py
docs/: .gitkeep  API_CONTRACT.md  BRANCH_PROTECTION.md  DECISIONS.md  HANDOVER.md  OP_RUNBOOK.md  README-TECH.md  README-TECH.pt-BR.md  README-tech.md  RUN.md
docs/adr/: 0001-db-as-queue.md  0002-retry-policy.md  0003-cancel-semantics.md
docs/artifacts/: GALLERY.md  README.md
docs/artifacts/assist_run/: demo_output.txt  health.txt  metrics.txt
docs/diagrams/: .gitkeep  01_use_cases.md  02_state_machine.md  03_uml_templates.md  README.md  architecture.md
scripts/: .gitkeep  __init__.py  check_sqlite_connect.py  collect_scan_metrics.py  debug_run_once.py  demo.py  fetch_trufflehog_checksum.py  filter_trufflehog_report.py  generate_artifacts.py  k6_load_test.js  load_demo_pg.py  validate_artifacts.py  vendor_trufflehog.py
src/: .gitkeep
src/jobmanager/: __init__.py  api.py  logging.py  schemas.py
src/jobmanager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/jobmanager/api/: __init__.py  app.py
src/jobmanager/schemas/: __init__.py  models.py
src/jobmanager/storage/: __init__.py  core.py  repository.py
src/jobmanager/worker/: __init__.py  runner.py
tests/: .gitkeep
tests/e2e/: test_api_worker_flow.py  test_e2e.py
tests/integration/: test_api_db.py
tests/unit/: test_generate_artifacts.py
tests/unit/jobmanager/: test_api_branches.py  test_api_extra.py  test_cancel_behavior.py  test_lease_concurrency.py  test_storage_worker_exception_paths.py  test_worker_error.py
tests/unit/scripts/: test_check_sqlite_connect.py  test_collect_scan_metrics.py  test_fetch_trufflehog_checksum.py  test_filter_trufflehog_report.py  (+1 more)
tools/: trufflehog.sha256
(+15 files in other folders)
